<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/realbg"
    android:orientation="vertical"
    tools:ignore="MergeRootFrame">
    <!--    tools:context="com.serenegiant.usbcameratest0.NewMainActivity"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/EditPort"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:background="@drawable/acm_inputbox"
                android:hint="@string/SetPort"
                android:imeOptions="flagNoFullscreen"
                android:inputType="number"
                android:maxLength="5"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/SetPort"
                style="@style/top_group"
                android:layout_weight="1"
                android:text="@string/SetPort"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/GetAppPort"
                style="@style/top_group"
                android:text="@string/GetAppPort"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/GetPort"
                style="@style/top_all"
                android:text="@string/GetPort"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/GetErrPort"
                style="@style/top_group"
                android:onClick="showTheUsefulDev"
                android:text="@string/GetErrPort"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/surfaceView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <SurfaceView
                    android:id="@+id/surfaceView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/border"
                    android:text="" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/show_power"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/power_off" />

                <Button
                    style="@style/top_group"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <Button
                    style="@style/top_all"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/video_return_main"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/videoreturnmainxmltoggle" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/mypicture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/snapshots"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <!--listiew-->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1" />

                    <ListView
                        android:id="@+id/video_bmp_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:stackFromBottom="true"
                        android:transcriptMode="alwaysScroll" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/button_above"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:orientation="horizontal">
                            <Button
                                android:id="@+id/face_startbtn"
                                style="@style/top_group"
                                android:layout_gravity="bottom"
                                android:layout_marginTop="2dp"
                                android:text="@string/StartVideo"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                            <Button
                                android:id="@+id/face_stopbtn"
                                style="@style/top_all"
                                android:layout_gravity="bottom"
                                android:text="@string/StopVideo"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/button_below"
                            android:layout_below="@+id/button_above"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <Button
                                android:id="@+id/face_capturebtn"
                                style="@style/top_group"
                                android:layout_marginBottom="2dp"
                                android:text="@string/Capture"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout> <!--三个按钮-->

            </LinearLayout>   <!--三个按钮的父边框-->


        </LinearLayout>  <!--右边的大框-->
    </LinearLayout>
</LinearLayout>

