<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="@drawable/realbg"
              android:padding="10dp">
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="0dp"
			android:layout_marginRight="0dp"
			android:layout_marginLeft="0dp"
			android:layout_marginBottom="10dp">
		
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			<ImageView
					android:id="@+id/system_admin_psw_alert_img"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:background="@drawable/cameaxmltoggle"/>
		</LinearLayout>
		<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1">
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:text="@string/setmodel"
					android:textColor="@color/blue"
					android:textSize="25sp"/>
		
		</LinearLayout>
		
		<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			
			<ImageButton
					android:id="@+id/system_admin_psw_alert_close"
					android:layout_height="30dp"
					android:layout_width="30dp"
					android:background="@drawable/closedialog"
					android:layout_marginEnd="0dp"
					android:contentDescription="TODO"/>
		</LinearLayout>
	
	
	</LinearLayout>
	
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:orientation="horizontal"
			android:layout_weight="1">
		
		
		<LinearLayout
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:layout_weight="1"
		>
			<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="1dp"
					android:layout_marginTop="1dp"
					android:layout_marginRight="1dp"
					android:background="@drawable/lbs_popup_bg"
					android:paddingTop="21dp"
					android:paddingBottom="30dp">
				
				<!--          <ImageView
							  android:id="@+id/gotoSystemWifi"
							  android:layout_width="66dp"
							  android:layout_height="82dp"
							  android:layout_marginStart="5dp"
							  android:layout_marginTop="12dp"
							  android:layout_marginEnd="0dp"
							  android:background="@drawable/setrouter" />-->
				
				<EditText
						android:id="@+id/ssid_edit_account"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_alignParentTop="true"
						android:layout_marginLeft="5dp"
						android:layout_marginTop="5dp"
						android:layout_marginRight="5dp"
						android:layout_marginBottom="5dp"
						android:background="@drawable/pwd_edit_login"
						android:hint="输入wifi名称"
						android:lines="1"
						android:imeOptions="flagNoExtractUi"
						android:paddingLeft="45sp"
						android:textColor="#082CB1"
						android:textSize="16sp"/>
				
				<!-- 文本框左边帐号提示 -->
				
				<TextView
						android:id="@+id/mingchen"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignStart="@+id/ssid_edit_account"
						android:layout_alignLeft="@+id/ssid_edit_account"
						android:layout_alignTop="@+id/ssid_edit_account"
						android:layout_alignBottom="@+id/ssid_edit_account"
						android:layout_marginEnd="1dp"
						android:layout_marginRight="1dp"
						android:gravity="center_vertical"
						android:paddingStart="7sp"
						android:paddingLeft="7sp"
						android:text="名称"
						android:textSize="16sp"
						android:textStyle="bold"
						tools:ignore="RtlSymmetry"/>
				<!-- 下拉菜单按钮 -->
				
				<ImageButton
						android:id="@+id/select_wifi1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignTop="@+id/ssid_edit_account"
						android:layout_alignRight="@+id/ssid_edit_account"
						android:layout_alignBottom="@+id/ssid_edit_account"
						android:layout_marginRight="0dp"
						android:background="@drawable/option"/>
				<!-- 密码文本框 -->
				
				<EditText
						android:id="@+id/pwd_edit_account"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/ssid_edit_account"
						android:layout_alignStart="@+id/ssid_edit_account"
						android:layout_alignEnd="@+id/ssid_edit_account"
						android:layout_marginStart="1dp"
						android:layout_marginTop="5dp"
						android:imeOptions="flagNoExtractUi"
						android:layout_marginEnd="-1dp"
						android:background="@drawable/pwd_edit_login"
						android:hint="输入wifi密码"
						android:lines="1"
						android:paddingLeft="45sp"
						android:textColor="#E91E63"/>
				
				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignStart="@+id/pwd_edit_account"
						android:layout_alignLeft="@+id/pwd_edit_account"
						android:layout_alignTop="@+id/pwd_edit_account"
						android:layout_alignBottom="@+id/pwd_edit_account"
						android:layout_marginEnd="1dp"
						android:layout_marginRight="1dp"
						android:gravity="center_vertical"
						android:paddingStart="1dp"
						android:paddingLeft="1dp"
						android:text="密码"
						android:textSize="16sp"
						android:textStyle="bold"/>
				
				<!-- 记住密码选项 -->
			</RelativeLayout>
			
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="0dp"
					android:layout_weight="1"
					tools:ignore="NestedWeights">
				
				<RadioGroup
						android:id="@+id/main_group_model"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:layout_marginStart="10dp"
						android:layout_marginEnd="10dp"
						android:gravity="start"
						android:background="@drawable/acm_inputbox"
						android:orientation="horizontal">
					
					<RadioButton
							android:id="@+id/main_AP"
							style="@style/MyCheckBox"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="1dp"
							android:layout_weight="1"
							
							android:text="AP"/>
					
					<RadioButton
							android:id="@+id/main_ROUTER"
							style="@style/MyCheckBox"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="1dp"
							android:checked="true"
							android:layout_weight="1"
							android:text="Router"/>
					
					<RadioButton
							android:id="@+id/main_HOTSPOT"
							style="@style/MyCheckBox"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="1dp"
							android:layout_weight="1"
							android:text="HotSpot"/>
				
				</RadioGroup>
			
			</LinearLayout>
		
			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
			>
				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="10dp"
						android:paddingBottom="0dp">
					<CheckBox android:layout_width="wrap_content"
					          android:layout_height="wrap_content"
					          android:text="记住wifi"
					          android:textStyle="bold"
					          android:textColor="@color/blue"
					          android:checked="true"
					          style="@style/MyCheckBox"
					/>
					<Button
							android:id="@+id/sap_alert_dialog_cancel"
							android:layout_marginStart="10dp"
							style="@style/top_group"
							android:text="@string/setWifiMsg"/>
					
					<Button
							android:id="@+id/sap_alert_dialog_ok"
							android:layout_marginEnd="10dp"
							style="@style/top_all"
							android:text="@string/saveWifiMsg"/>
				</LinearLayout>
			
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>


</LinearLayout>